--- a/test/css/style.css
+++ b/test/css/style.css
@@ -2,3 +2,18 @@ body {
     margin: 0;
     overflow: hidden;
 }
+
+#generated_title{
+  position: fixed;
+  left: 20px;
+  top: 20px;
+  color: #000;
+  z-index: 100;
+}
+
+#generate{
+  position: fixed;
+  left: 20px;
+  top: 40px;
+  z-index: 100;
+}
