--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -5,10 +5,13 @@ body {
 }
 #generated_title {
   position: fixed;
-  left: 20px;
+  left: 40px;
   top: 20px;
   color: #000000;
   z-index: 100;
+  background-color: #fff;
+  font-family: helvetica, arial, sans-serif;
+  font-weight: bold;
 }
 #generate {
   position: fixed;
