--- a/assets/less/styles.less
+++ b/assets/less/styles.less
@@ -6,10 +6,13 @@ body {
 
 #generated_title{
   position: fixed;
-  left: 20px;
+  left: 40px;
   top: 20px;
   color: #000000;
   z-index: 100;
+  background-color: #fff;
+  font-family: helvetica, arial, sans-serif;
+  font-weight: bold;
 }
 
 #generate{
