update colors, add percentage

--- a/assets/less/styles.less
+++ b/assets/less/styles.less
@@ -4,10 +4,22 @@ body {
     background-color: #ffffff;
 }
 
-#generated_title{
+#title{
   position: fixed;
   left: 40px;
   top: 20px;
+  color: #000000;
+  z-index: 100;
+  background-color: #fff;
+  font-family: helvetica, arial, sans-serif;
+  font-weight: bold;
+}
+
+#percent{
+  position: fixed;
+  left: 40px;
+  top: 35px;
+  padding-top: 10px; 
   color: #000000;
   z-index: 100;
   background-color: #fff;
