--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -24,6 +24,22 @@ body {
   font-family: helvetica, arial, sans-serif;
   font-weight: bold;
 }
+#name {
+  position: fixed;
+  left: 40px;
+  bottom: 55px;
+  padding-bottom: 10px;
+  color: #000000;
+  z-index: 100;
+  background-color: #fff;
+  font-family: helvetica, arial, sans-serif;
+  font-weight: bold;
+  text-decoration: none;
+}
+#name:hover {
+  color: blue;
+  text-decoration: none;
+}
 #library {
   position: fixed;
   left: 40px;
