--- a/assets/less/styles.less
+++ b/assets/less/styles.less
@@ -27,6 +27,23 @@ body {
   font-weight: bold;
 }
 
+#name{
+  position: fixed;
+  left: 40px;
+  bottom: 55px;
+  padding-bottom: 10px; 
+  color: #000000;
+  z-index: 100;
+  background-color: #fff;
+  font-family: helvetica, arial, sans-serif;
+  font-weight: bold;
+  text-decoration: none;
+  &:hover{
+    color: blue;
+    text-decoration: none;
+  }
+}
+
 #library{
   position: fixed;
   left: 40px;
